--- a/MServer/MServer/MServer.vcproj
+++ b/MServer/MServer/MServer.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\share\network\include;..\..\share\network\packet;..\..\share"
+				AdditionalIncludeDirectories="C:\local\boost_1_47_0;..\..\share\network\include;..\..\share\network\packet;..\..\share"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -63,7 +63,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="networkd.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\..\share\network\lib"
+				AdditionalLibraryDirectories="C:\local\boost_1_47_0\lib32;..\..\share\network\lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -118,7 +118,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\share\network\include;..\..\share\network\packet;..\..\share"
+				AdditionalIncludeDirectories="C:\local\boost_1_47_0;..\..\share\network\include;..\..\share\network\packet;..\..\share"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -139,6 +139,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="network.lib"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="C:\local\boost_1_47_0\lib32;..\..\share\network\lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
