--- a/share/network/Netlib/Network/lib.vcproj
+++ b/share/network/Netlib/Network/lib.vcproj
@@ -41,8 +41,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\packet;..\..\include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;NETWORK_API"
+				AdditionalIncludeDirectories="C:\local\boost_1_47_0;..\..\packet;..\..\include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;WIN32_LEAN_AND_MEAN;NETWORK_API"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -63,6 +63,7 @@
 				Name="VCLinkerTool"
 				OutputFile="..\..\lib\Networkd.dll"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="C:\local\boost_1_47_0\lib32"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -117,8 +118,8 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\packet;..\..\include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;NETWORK_API"
+				AdditionalIncludeDirectories="C:\local\boost_1_47_0;..\..\packet;..\..\include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;WIN32_LEAN_AND_MEAN;NETWORK_API"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -138,6 +139,7 @@
 				Name="VCLinkerTool"
 				OutputFile="..\..\lib\Network.dll"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="C:\local\boost_1_47_0\lib32"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
